# celltype-agent

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
cli/: __init__.py  main.py
docs/: ARCHITECTURE.md  DESIGN_DECISIONS.md  ROADMAP.md
notebooks/: demo.ipynb  demo.py  pbmc3k_annotations.csv
notebooks/.ipynb_checkpoints/: demo-checkpoint.ipynb
src/celltype_agent/: __init__.py  agent.py  core.py  deconvolution.py  knowledge.py  markers.py  models.py  spatial.py
tests/: test_deconvolution.py  test_knowledge.py  test_markers.py  test_models.py  test_narrative.py  test_spatial.py
