[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "celltype-agent"
version = "0.1.0"
description = "Automated cell type annotation for single-cell and spatial genomics using Claude"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Phil Lobb", email = "phil@lobb.co.uk" }]

dependencies = [
    "anthropic>=0.52.0",
    "anndata>=0.10.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
scanpy = [
    "scanpy>=1.9.0",
    "leidenalg>=0.10.0",
]
notebook = [
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]
spatial = [
    "scikit-learn>=1.3.0",
    "squidpy>=1.3.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]
all = [
    "celltype-agent[scanpy,notebook,spatial,dev]",
]

[project.scripts]
celltype-agent = "cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/celltype_agent", "cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
